--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -131,6 +131,8 @@
     }
   </style>
   <title>VIVUM Registration</title>
+  <link rel="icon" type="image/png" href="{{url_for('static', filename='favicon.png')}}"/>
+  <link rel="icon" type="image/png" href="{{url_for('static', filename='favicon.png')}}"/>
 </head>
 
 <body>
@@ -138,7 +140,7 @@
     <div class="blur">
       <div class="free-space"></div>
       <div class="main-body">
-        <div class="header"> <img src="{{url_for('static', filename='1_edited.png')}}" alt="vivum"> </div>
+        <div class="header"> <img src="{{url_for('static', filename='2021.png')}}" alt="vivum"> </div>
         <div class="space" style="height: 150px;"></div>
         <div class="form">
           <form action="/forms" method="post" style="text-align: center;">
