--- a/templates/forms.html
+++ b/templates/forms.html
@@ -3,6 +3,8 @@
 
 <head>
   <title>VIVUM Registration Forms</title>
+  <link rel="icon" type="image/png" href="{{url_for('static', filename='favicon.png')}}"/>
+  <link rel="icon" type="image/png" href="{{url_for('static', filename='favicon.png')}}"/>
   <style>
     @font-face {
       font-family: luloClean;
@@ -108,7 +110,7 @@
     }
 
     .background {
-      background-image: url({{url_for('static', filename='diya_tiger_orange.png')}});
+      background-image: url({{url_for('static', filename='Snakevivum2021.png')}});
     background-repeat: no-repeat;
     background-size: 60%;
     background-position: center;
@@ -119,7 +121,7 @@
 <body>
   <div class="background">
     <div class="header">
-      <img style="margin: auto;" src="{{url_for('static', filename='vivum_orange.png')}}" alt="vivum">
+      <img style="margin: auto;" src="{{url_for('static', filename='2021.png')}}" alt="vivum">
     </div>
     <div class="body">
       <div class="free-space"></div>
@@ -130,67 +132,25 @@
         <div class="first-row">
           <div class="category" style="height: 300px;">
           <div class="box">
-            <div class="title"> E-sports </div>
-            <button onclick="window.open('https://forms.gle/4nwP5oWg1hqic8hj9', '_blank')"> FIFA (PS4) </button><br>
-            <button onclick="window.open('https://forms.gle/a96YKGdYCxWpD5XPA', '_blank')"> FIFA (Xbox) </button><br>
-            <button onclick="window.open('https://forms.gle/6bEPpxFtKYdQwMiP8', '_blank')"> Minecraft </button><br>
-            <button onclick="window.open('https://forms.gle/ByRKSQfVvRmdWkc69', '_blank')"> Rocket League </button><br>
+            <div class="title"> Events </div>
+            <button onclick="window.open('https://forms.gle/knXu2jq8FVHyZn8L6', '_blank')"> Dance </button><br>
+            <button onclick="window.open('https://forms.gle/A5ske626BQNk7ahU7', '_blank')"> Drama </button><br>
+            <button onclick="window.open('https://forms.gle/HxWSK9JUGbGG9ALL6', '_blank')"> E-sports </button><br>
+            <button onclick="window.open('https://forms.gle/wkLPbksx4BQuHL7r8', '_blank')"> Entreprenuership </button><br>
+            <button onclick="window.open('https://forms.gle/4GM8qW8EXGUmAHH97', '_blank')"> Fashion </button><br>
+            <button onclick="window.open('https://forms.gle/hzANDHFwxegU9cze7', '_blank')"> Gameshow </button><br>
+            <button onclick="window.open('https://forms.gle/suvfNwNLu8g7wX1y9', '_blank')"> Music</button><br>
+            <button onclick="window.open('https://forms.gle/RbfaEjyjZAZoX9Be9', '_blank')"> Poetry Slam/Rap Battle </button><br>
+            <button onclick="window.open('https://forms.gle/fvfq6EwgtV36mMV27', '_blank')"> Tiktok/Reels </button><br>
+            <button onclick="window.open('https://docs.google.com/forms/d/1WkSKkZ1w-Dl_SzNl8wtMbyzdDsx6Dio0frTQkOJpeXc/edit?usp=sharing', '_blank')"> Sports </button><br>
+            <button onclick="window.open('https://forms.gle/dz4Vyzrobk34vFDBA', '_blank')"> Standup </button><br>
+          
           </div>
           </div>
-          <div class="category" style="height: 300px;">
-            <div class="box">
-              <div class="title"> Dance </div>
-              <button onclick="window.open('https://forms.gle/AL1V6LPUQy79QsaR7', '_blank')"> Theme it up! </button><br>
-              <button onclick="window.open('https://forms.gle/n8BvG1dFw4B6zFMa6', '_blank')"> Nachedene Saare </button><br>
-              <button onclick="window.open('https://forms.gle/NrtxJcPcW27ns48h7', '_blank')"> Moves like Jagger </button><br>
-            </div>
-          </div>
-          <div class="category" style="height: 300px;">
-            <div class="box">
-              <div class="title"> Art </div>
-              <button onclick="window.open('https://forms.gle/4kTFHz23y6bFWo3V8', '_blank')"> Body Canvas </button><br>
-              <button onclick="window.open('https://forms.gle/7XKAJdGjs7RgsyUB8', '_blank')"> Art it up </button><br>
-              <button onclick="window.open('https://forms.gle/uADhg5KohpSNiHzE8', '_blank')"> Le Recyclage </button><br>
-              <button onclick="window.open('https://forms.gle/e1Gc8z1j1uU4GQST6', '_blank')"> Kidspire </button><br>
-            </div>
-          </div>
+       
+         
         </div>
-        <div class="second-row">
-          <div class="category">
-            <div class="box">
-              <div class="title"> Drama </div>
-              <button onclick="window.open('https://forms.gle/NSXvmhCiNhMh5WSr5', '_blank')"> Soliloquize </button><br>
-              <button onclick="window.open('https://forms.gle/yZebECoBvAEgThmYA', '_blank')"> Poetry Slam</button><br>
-              <button onclick="window.open('https://forms.gle/UJmVXLva4qd8UwAd9', '_blank')"> Reel it out </button><br>
-              <button onclick="window.open('https://forms.gle/djKNEakWeAHfVvWf9', '_blank')"> Sell up! </button><br>
-              <button onclick="window.open('https://forms.gle/6TPPsKgCxbiFqzYk7', '_blank')"> Mime-it-out </button><br>
-              <button onclick="window.open('https://forms.gle/nfPiaFhQTxcQP8KKA', '_blank')"> Play the Prose </button><br>
-            </div>
-          </div>
-          <div class="category">
-            <div class="box">
-              <div class="title"> Fashion </div>
-              <button onclick="window.open('https://forms.gle/d9658SsWukAY9Tjj9', '_blank')"> VIVUM X MET Gala </button><br>
-              <button onclick="window.open('https://forms.gle/cFBrsDX6xKbucxwX9', '_blank')"> Out of the Box </button><br>
-              <button onclick="window.open('https://forms.gle/MkHJJjGaAeFma5326', '_blank')"> VIVUM Seasons </button><br>
-              <button onclick="window.open('https://forms.gle/4tGZbF2bRyQWYdFs8', '_blank')"> The Walk of Fame </button><br>
-              <button onclick="window.open('https://forms.gle/LnbfUMhEtJh7ki1K7', '_blank')"> “V” for Vintage    </button><br>
-              <button onclick="window.open('https://forms.gle/Nmz2Gri4ZN653u8R6', '_blank')"> The Vivum Vogue Challenge </button><br>
-            </div>
-          </div>
-          <div class="category">
-            <div class="box">
-              <div class="title"> Thought-based </div>
-              <button onclick="window.open('https://forms.gle/j354oy5D3v4F6ceZ9', '_blank')"> Chess </button><br>
-              <div class="title"> Sports </div>
-              <button onclick="window.open('https://forms.gle/JBsL4SM5RXCo8o2o7', '_blank')"> Trojan's Cup </button><br>
-              <div class="title"> Music </div>
-              <button onclick="window.open('https://forms.gle/mYS4phqXPV6NxATs5', '_blank')"> VIVUM Music Festival </button><br>
-              <div class="title"> Cooking </div>
-              <button onclick="window.open('https://forms.gle/Vbqa2cPadWFwoYQn9', '_blank')"> VIVUM X Masterchef </button><br>
-            </div>
-          </div>
-        </div>
+     
       </div>
       <div class="free-space"></div>
     </div>
