--- a/templates/forms.html
+++ b/templates/forms.html
@@ -142,7 +142,7 @@
             <button onclick="window.open('https://forms.gle/suvfNwNLu8g7wX1y9', '_blank')"> Music</button><br>
             <button onclick="window.open('https://forms.gle/RbfaEjyjZAZoX9Be9', '_blank')"> Poetry Slam/Rap Battle </button><br>
             <button onclick="window.open('https://forms.gle/fvfq6EwgtV36mMV27', '_blank')"> Tiktok/Reels </button><br>
-            <button onclick="window.open('https://docs.google.com/forms/d/1WkSKkZ1w-Dl_SzNl8wtMbyzdDsx6Dio0frTQkOJpeXc/edit?usp=sharing', '_blank')"> Sports </button><br>
+            <button onclick="window.open('https://forms.gle/cpU3heAp92X5qMst7', '_blank')"> Sports </button><br>
             <button onclick="window.open('https://forms.gle/dz4Vyzrobk34vFDBA', '_blank')"> Standup </button><br>
           
           </div>
